--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -9,33 +9,21 @@
      ViewData["Title"] = "O książce";
 }
 
-O książce
-<div>
-    <h3>@Model.Book.Title</h3>
 
-    <p>@Model.Author.Name @Model.Author.LastName</p>
 
-    <img src="~/images/@Model.Book.Image" height="400" width="400"/>
-</div>
-
-@if (@TempData["Alert"] != null)
-{
-    if (@TempData["Alert"]?.ToString() == "Success")
-    {
-        <div class="alert alert-success" role="alert">
-            Akcja została wykonana pomyślnie!
-        </div>
-    }
-    else if (@TempData["Alert"]?.ToString() == "Danger")
-    {
-        <div class="alert alert-danger" role="alert">
-            Wystąpił błąd! Akcja nie została wykonana!
-        </div>
-    }
-}
-
-lista egzemplarzy
 <div class="container">
+    <partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
+
+    O książce
+    <div>
+        <h3>@Model.Book.Title</h3>
+
+        <p>@Model.Author.Name @Model.Author.LastName</p>
+
+        <img src="~/images/@Model.Book.Image" height="400" width="400"/>
+    </div>
+
+
     @if (User.IsInRole("Admin"))
     {
         <div class="row p-2">
@@ -45,11 +33,7 @@ lista egzemplarzy
             <div class="col-7 d-flex justify-content-end">
                 <label class="form-label me-3 align-self-center">Kategoria</label>
                 <select class="form-control w-25">
-                    <option value="">Wszystko</option>
-                    @for (int i = 0; i < @ViewBag.Categories.Count; i++)
-                    {
-                        <option value="@i">@ViewBag.Categories[@i]</option>
-                    }
+                    <partial name="Templates/_Select" model="@ViewBag.Categories"/>  
                 </select>
             </div>
         </div>
@@ -64,65 +48,13 @@ lista egzemplarzy
             <div class="col-7 d-flex justify-content-end">
                 <label class="form-label me-3 align-self-center">Sortowanie</label>
                 <select class="form-control w-25">
-                    @for (int i = 0; i < @ViewBag.Sort.Count; i++)
-                    {
-                        <option value="@i">@ViewBag.Sort[@i]</option>
-                    }
+                    <partial name="Templates/_Select" model="@ViewBag.Sort"/>  
                 </select>
             </div>
         </div>  
     }
 
     <ul class="list-group mt-4">
-            @foreach (var Copy in @Model.Copies)
-            {
-                <li class="list-group-item d-flex justify-content-between">
-                    <div class="align-self-center">
-                        <a class="text-decoration-none text-dark"><strong class="mb-1">@Copy.Number</strong></a>
-                        @if (Copy.Status=="0"){
-                            <a class="text-decoration-none text-dark">Niedostępna</a>
-                        }
-                        else if (Copy.Status=="1"){
-                            <a class="text-decoration-none text-dark">Dostępna</a>
-                        }
-                    </div>
-                    <div class="align-self-center">
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <a class="btn btn-outline-primary" asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Edit">Edytuj</a>
-                            <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Usuń</a>
-                            <form asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
-                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                              <div class="modal-dialog">
-                                <div class="modal-content">
-                                  <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Usuwanie</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                  </div>
-                                  <div class="modal-body">
-                                    Czy na pewno usunąć egzemplarz?
-                                  </div>
-                                  <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-                                    <button type="submit" class="btn btn-danger">Usuń</button>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            </form>
-                        }
-                        else if (SignInManager.IsSignedIn(User))
-                        {
-                            @if (@Copy.Status=="1")
-                            {
-                                <form asp-route-id="@Copy.Id" asp-controller="Book" asp-action="Reservate" method="post">
-                                    <button type="submit" class="btn btn-outline-primary">Zarezerwuj</button>
-                                </form> 
-                            }
-                        }        
-                    </div>
-                </li>    
-            }
-        </ul>
-
+        <partial name="Templates/_CopyList" model="@Model.Copies"/>
+    </ul>
 </div>
